--- a/client/App.scss
+++ b/client/App.scss
@@ -11,6 +11,38 @@
   }
 
   > main {
-    text-align: center;
+    max-width: 800px;
+    margin: auto;
+
+    .entities {
+      div {
+        display: flex;
+        align-items: flex-start;
+        margin: 1rem 0;
+
+        input, textarea {
+          margin: 0 .5rem;
+          padding: 0 .25rem;
+          font-family: inherit;
+          font-size: inherit;
+          line-height: inherit;
+        }
+
+        input {
+          flex-shrink: 0;
+        }
+
+        textarea {
+          flex-grow: 1;
+          min-height: 8rem;
+        }
+      }
+    }
+
+    .responses {
+      p {
+        white-space: pre-line;
+      }
+    }
   }
 }
